Old Man dialogue

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1961,9 +1961,9 @@ Wintc_IDCard_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"O
 Wintc_Flower_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StartDialogueWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerReply_C="\"Object.Default.Replies\" "
-BTTask_BlueprintBase=
-BTTaskNode=
-BTNode=
+BTTask_BlueprintBase="\"Object.Default.Replies\" "
+BTTaskNode="\"Object.Default.Replies\" "
+BTNode="\"Object.Default.Replies\" "
 ListView="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ListViewBase="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
