End screen works

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/GridlockGameInstance.GridlockGameInstance_C
 GameDefaultMap=/Game/MapsForGame/Garrett/CarScene_BlockOut7_Map.CarScene_BlockOut7_Map
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
