--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2117,9 +2117,9 @@ TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Ob
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget=
-Widget=
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual=
-Visual=
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
@@ -2142,7 +2142,7 @@ StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyIn
 Image="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 L_WindowControl_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-UserWidget=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 LightmassImportanceVolume=
 Volume=
 Brush=
@@ -2178,9 +2178,9 @@ Wintc_IDCard_C=
 Wintc_Flower_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StartDialogueWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerReply_C="\"Object.Default.Replies\" \"Object.Task.TickInterval\" "
-BTTask_BlueprintBase="\"Object.Task.TickInterval\" "
-BTTaskNode="\"Object.Task.TickInterval\" "
-BTNode="\"Object.Task.TickInterval\" "
+BTTask_BlueprintBase="\"Object.Default.Replies\" \"Object.Task.TickInterval\" "
+BTTaskNode="\"Object.Default.Replies\" \"Object.Task.TickInterval\" "
+BTNode="\"Object.Default.Replies\" \"Object.Task.TickInterval\" "
 ListView="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ListViewBase="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
